Bug 472019 -  crash [@ nsMsgDBFolder::CallFilterPlugins(nsIMsgWindow*, int*)], r/sr=bienvenu